refactor&feat: make scripts
added watch aka make dev so it reloads the server on changes

--- a/apps/api/Makefile
+++ b/apps/api/Makefile
@@ -2,11 +2,16 @@ cmd := docker-compose -p wheel
 devcmd := $(cmd) -f docker-compose.dev.yml
 logs := docker-compose logs -f --tail=10
 
-# build docker compose dev
+# run with nodemon and watch for changes
+# npm i -g nodemon (if doesn't run)
 dev:
+	nodemon --watch './**/*.go' --signal SIGTERM --exec 'go' run main.go
+
+# build docker compose dev
+docker-dev:
 	$(devcmd) up -d --build
 	
 # build docker compose prod, 
 # and view logs
-prod:
+docker-prod:
 	$(cmd) up -d --build && $(logs)
